--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-.env
-.html
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# for cloud private keys
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# For cloud private keys
 .json
+
+#logs
+*.log
+log/*
+
+# Unit test / coverage reports
+.html
